# witgen

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: release-patch.yml  release.yml
crates/cargo_witgen/: Cargo.toml  README.md
crates/cargo_witgen/src/: app.rs  lib.rs  main.rs  opt.rs
crates/witgen_macro/: Cargo.toml  README.md
crates/witgen_macro/src/: generator.rs  lib.rs  options.rs
crates/witgen_macro_helper/: Cargo.toml  LICENSE
crates/witgen_macro_helper/src/: generator.rs  lib.rs  util.rs  visitor.rs  wit.rs
examples/: gen_all.sh
examples/example_dep/: Cargo.toml  README.md  index.wit
examples/example_dep/src/: lib.rs
examples/my_witgen_example/: Cargo.toml  index.wit  string.wit  witgen.wit
examples/my_witgen_example/src/: extra_type.rs  lib.rs
src/: lib.rs
tests/: test.rs  update_snapshots.sh
tests/__k9_snapshots__/test/: test_diff.snap
tests/files/: success.rs
