[package]
name = "cargo-witgen"
version = "0.8.0"
edition = "2021"
authors = ["Benjamin Coenen <benjamin.coenen@hotmail.com>"]
description = "witgen is a library to help you generate wit definitions in a wit file for WebAssembly and this binary will generate wit file"
license-file = "LICENSE"
readme = "README.md"
repository = "https://github.com/bnjjj/witgen"
homepage = "https://github.com/bnjjj/witgen"
documentation = "https://docs.rs/witgen"
keywords = ["webassembly", "generate", "cargo", "wasm"]
categories = ["command-line-interface", "command-line-interface", "wasm"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.51"
cargo_metadata = "0.14.1"
clap = "=3.0.0-beta.5"
clap_derive = "=3.0.0-beta.5"
glob = "0.3.0"
once_cell = "1.8.0"
