[package]
name = "cargo-witgen"
version = "0.12.0"
edition = "2021"
authors = ["Benjamin Coenen <benjamin.coenen@hotmail.com>"]
description = "witgen is a library to help you generate wit definitions in a wit file for WebAssembly and this binary will generate wit file"
license-file = "LICENSE"
readme = "README.md"
repository = "https://github.com/bnjjj/witgen"
homepage = "https://github.com/bnjjj/witgen"
documentation = "https://docs.rs/witgen"
keywords = ["webassembly", "generate", "cargo", "wasm"]
categories = ["command-line-interface", "command-line-interface", "wasm"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.51"
cargo_metadata = "0.14.1"
clap = {version = "=3.1.8", features = ["derive", "cargo"]}
clap_derive = "=3.1.7"
witgen_macro_helper= {path= "../witgen_macro_helper"}

[lib]
name = "cargo_witgen"
path = "src/lib.rs"

[[bin]]
name = "cargo_witgen"
path = "src/main.rs"