[package]
name = "witgen_macro"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.51"
cargo_metadata = "0.14.1"
hex = "0.4.3"
once_cell = "1.8.0"
proc-macro2 = { version = "1.0.32", features = ["span-locations"] }
quote = "1.0.10"
sha2 = "0.9.8"
syn = { version = "1.0.82", features = ["full", "extra-traits"] }

[lib]
proc-macro = true
