[package]
name = "witgen_macro"
version = "0.14.0"
edition = "2021"
authors = ["Benjamin Coenen <benjamin.coenen@hotmail.com>"]
description = "Macros for witgen which is a library to help you generate wit definitions in a wit file for WebAssembly"
license-file = "LICENSE"
readme = "README.md"
repository = "https://github.com/bnjjj/witgen"
homepage = "https://github.com/bnjjj/witgen"
documentation = "https://docs.rs/witgen"
keywords = ["webassembly", "generate", "cargo", "wasm"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
witgen_macro_helper = { path = "../witgen_macro_helper", version = "0.14" }
anyhow = "1.0.51"
once_cell = "1.8.0"
proc-macro2 = { version = "1.0.32", features = ["span-locations"] }
syn = { version = "1.0.82", features = ["full", "extra-traits"] }

[lib]
proc-macro = true
